# taskwarrior

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .taskcluster.yml  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Cargo.toml  ChangeLog  ChangeLog.230  DEVELOPER  DEVELOPER.md  DEVELOPERS  Date.cpp  EXPOSITION  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  NOTES.txt  POLICY.md  PUNCHLIST  README  README.1.5.0  README.build  README.md  README_TASKD  RELEASING.md  SAMPLE_taskrc  SECURITY.md  TODO.txt  TUTORIAL  adsense.html  announcement.txt  (+24 more)
cli/: Cargo.toml  build.rs
cli/src/: errors.rs  lib.rs  macros.rs  main.rs  report.rs  settings.rs  table.rs  usage.rs
cli/tests/: cli.rs
doc/: CMakeLists.txt  README.md
doc/devel/: README.md
doc/man/: .gitignore  task-color.5  task-color.5.in  task-faq.5  task-faq.5.in  task-sync.5  task-sync.5.in  task-tutorial.5  task-tutorial.5.in  task.1  task.1.in  taskrc.5  taskrc.5.in  tasksh.1  tasksh.1.in
doc/man1/: task.1
doc/man5/: task-tutorial.5  taskrc.5
doc/man7/: task.7
doc/misc/: grammar.bnf  run.193  run.banner  run.sample.blue  run.sample.color  run.sample.deps  run.sample.format  run.sample.holidays  run.sample.info  run.sample.journal  run.sample.recur  run.sample.red  run.sample.summary  run.sample.timesheet  script-193.txt  script-color.txt  script-hooks-2.txt  script-hooks.txt  script.txt
doc/rc/: 16-dark.theme  bubblegum-256.theme  dark-16.theme  dark-256.theme  dark-blue-256.theme  dark-default-16.theme  dark-gray-256.theme  dark-gray-blue-256.theme  dark-green-256.theme  dark-red-256.theme  dark-violets-256.theme  dark-yellow-green.theme  holidays-AT.rc  holidays-BY.rc  holidays-CA.rc  holidays-DE.rc  holidays-DK.rc  holidays-ES.rc  holidays-FR.rc  holidays-NL.rc  holidays-NO.rc  holidays-NZ.rc  holidays-SE.rc  holidays-UK.rc  holidays-US.rc  holidays.be-BY.rc  holidays.cs-CZ.rc  holidays.da-DK.rc  holidays.de-AT.rc  holidays.de-BE.rc  holidays.de-CH.rc  holidays.de-DE.rc  holidays.el-GR.rc  holidays.en-AU.rc  holidays.en-CA.rc  holidays.en-GB.rc  holidays.en-GL.rc  holidays.en-HK.rc  holidays.en-IN.rc  holidays.en-NZ.rc  (+39 more)
doc/ref/: task-ref.pages
i18n/: CMakeLists.txt  i18n.h  strings.de-DE  strings.en-US  strings.es-ES  strings.fr-FR  strings.nl-NL  strings.sv-SE  tips.de-DE  tips.en-US  tips.es-ES  tips.fr-FR  tips.it-IT  tips.ja-JP  tips.por-PRT  tips.sv-SE
integration-tests/: .gitignore  Cargo.toml  README.md  build.rs
integration-tests/src/: lib.rs
integration-tests/tests/: bindings.rs  update-and-delete-sync.rs
lib/: Cargo.toml  Makefile  build.rs  taskchampion.h
lib/src/: annotation.rs  arrays.rs  atomic.rs  kv.rs  lib.rs  replica.rs  result.rs  server.rs  status.rs  storage.rs  string.rs  stringlist.rs  strings.rs  task.rs  tasklist.rs  taskmut.rs  traits.rs  uda.rs  util.rs  uuid.rs  uuidlist.rs  workingset.rs
replica-server-tests/: Cargo.toml
replica-server-tests/src/: lib.rs
replica-server-tests/tests/: cross-sync.rs
rust/integration-tests/: Cargo.toml  README.md  build.rs
rust/lib/: Cargo.toml  taskchampion.h
rust/sync-server/: Cargo.toml
rust/taskchampion/: Cargo.toml
scripts/: CMakeLists.txt  changelog.py  reproduce-dockerfile  review-dockerfile
scripts/add-ons/: README  export-csv.pl  export-html.pl  export-ical.pl  export-sql.py  export-tsv.pl  export-xml.pl  export-xml.py  export-xml.rb  export-yad.pl  export-yaml.pl  import-todo.sh.pl  import-yaml.pl  update-holidays.pl
scripts/bash/: context  task.sh  task_completion.sh  task_functions.sh
scripts/extensions/: README  command.lua  dom.lua  format.lua  priority.lua  program_hook.lua  task_hook.lua  uda.lua
scripts/fish/: task.fish
scripts/hooks/: README  on-add  on-add.the  on-exit  on-exit.shadow-file  on-launch  on-modify
scripts/utils/: l10n  verify_l10n  verify_strings
scripts/vim/: README
scripts/zsh/: _task
src/: .gitignore  A3.cpp  A3.h  A3t.cpp  A3t.h  API.cpp  API.h  Alias.cpp  Alias.h  Arg.cpp  Arg.h  Arguments.cpp  Arguments.h  Att.cpp  Att.h  CLI.cpp  CLI.h  CLI2.cpp  CLI2.h  CMakeLists.txt  Cmd.cpp  Cmd.h  Color.cpp  Color.h  Column.cpp  Column.h  Config.cpp  Config.h  Context.cpp  Context.h  DOM.cpp  DOM.h  Date.cpp  Date.h  Dates.cpp  Dates.h  Directory.cpp  Directory.h  Duration.cpp  Duration.h  (+176 more)
src/.deps/: Config.Po  Date.Po  T.Po  TDB.Po  Table.Po  color.Po  parse.Po  rules.Po  task.Po  text.Po  util.Po
src/cli/: a2.rs  cli2.rs  lexer.rs  mod.rs
src/columns/: CMakeLists.txt  ColBg.cpp  ColBg.h  ColDate.cpp  ColDate.h  ColDepends.cpp  ColDepends.h  ColDescription.cpp  ColDescription.h  ColDue.cpp  ColDue.h  ColEnd.cpp  ColEnd.h  ColEntry.cpp  ColEntry.h  ColFg.cpp  ColFg.h  ColID.cpp  ColID.h  ColIMask.cpp  ColIMask.h  ColLast.cpp  ColLast.h  ColMask.cpp  ColMask.h  ColModified.cpp  ColModified.h  ColParent.cpp  ColParent.h  ColPriority.cpp  ColPriority.h  ColProject.cpp  ColProject.h  ColRType.cpp  ColRType.h  ColRecur.cpp  ColRecur.h  ColScheduled.cpp  ColScheduled.h  ColStart.cpp  (+31 more)
src/commands/: CMakeLists.txt  CmdAdd.cpp  (+121 more)
sync-server/: Cargo.toml
taskchampion/: 404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  build-docs.sh  data-model.html  encryption.html  http.html  index.html  installation.html  internals.html  object-store.html  plans.html  print.html  running-sync-server.html  searchindex.js  searchindex.json  snapshots.html  storage.html  sync-model.html  sync-protocol.html  sync.html  taskdb.html  tasks.html
test/: .gitignore  ANALYSIS  CMakeLists.txt  Makefile  README  README.md  TAP.py  abbreviation.t  abbreviation.test.py  add.t  add.test.py  alias.t  alias.test.py  annotate.t  annotate.t.py  annotate.test.py  append.t  append.t.py  append.test.py  args.1.t  args.2.t  args.3.t  args.4.t  args.5.t  args.t  args.t.py  args.test.py  arguments.t.cpp  att.t.cpp  auto-purge.test.py  autocomplete.t.cpp  backlog.t  backslash.t  bash_completion.t  bash_completion.test.py  bash_tap.sh  bash_tap_tw.sh  basic.t  benchmark.t  benchmark2.t  (+702 more)
(+1062 files in other folders)
