[package]
authors = ["Dustin J. Mitchell <dustin@mozilla.com>"]
edition = "2018"
name = "taskchampion-cli"
version = "0.3.0"

build = "build.rs"

# Run 'ta' when doing 'cargo run' at repo root
default-run = "ta"

[dependencies]
dirs-next = "^2.0.0"
env_logger = "^0.8.3"
anyhow = "1.0"
thiserror = "1.0"
log = "^0.4.14"
nom = "^6.1.2"
prettytable-rs = "^0.8.0"
textwrap = { version="^0.13.4", features=["terminal_size"] }
termcolor = "^1.1.2"
atty = "^0.2.14"
toml = "^0.5.8"
toml_edit = "^0.2.0"

[dependencies.taskchampion]
path = "../taskchampion"

[dev-dependencies]
assert_cmd = "^1.0.3"
predicates = "^1.0.7"
tempfile = "3"
